--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "arpit",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
